--- a/edit.html
+++ b/edit.html
@@ -14,7 +14,7 @@
   <!-- Supabase config (מגדיר SUPABASE_URL, ANON_KEY, http) -->
   <script src="config.js"></script>
 
-  <!-- פונקציות עזר כלליות (clearLog, showError, showStatus אופציונלי) -->
+  <!-- פונקציות עזר כלליות (clearLog, showError) -->
   <script src="common.js"></script>
 
   <!-- Bootstrap JS -->
@@ -31,11 +31,12 @@
   <!-- כותרת אימון -->
   <section class="mb-4">
     <div class="row g-3 align-items-end">
-      <div class="col-sm-6 col-md-5">
+      <div class="col-sm-6 col-md-4">
         <label for="wName" class="form-label">שם אימון</label>
         <input type="text" id="wName" class="form-control" />
       </div>
-      <div class="col-sm-6 col-md-4">
+
+      <div class="col-sm-6 col-md-3">
         <label for="wType" class="form-label">סוג אימון</label>
         <select id="wType" class="form-select">
           <option>אימון אירובי</option>
@@ -45,10 +46,22 @@
           <option>אימון מתיחות</option>
         </select>
       </div>
+
       <div class="col-sm-6 col-md-3">
         <label for="wDate" class="form-label">תאריך אימון (לא חובה)</label>
         <input type="date" id="wDate" class="form-control" />
       </div>
+
+      <div class="col-sm-6 col-md-2">
+        <label for="wState" class="form-label">סטטוס</label>
+        <select id="wState" class="form-select">
+          <option value="מתוכנן">מתוכנן</option>
+          <option value="בוצע">בוצע</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-text mt-1">
+      אם בוחרים “בוצע” ללא תאריך — ימולא אוטומטית תאריך של היום.
     </div>
   </section>
 
@@ -58,7 +71,7 @@
     <button id="deleteBtn" class="btn btn-danger">מחק אימון</button>
     <button id="cancelBtn" class="btn btn-secondary">בטל</button>
     <button id="reorderBtn" class="btn btn-outline-dark ms-auto">סידור תרגילים</button>
-    <button id="pasteBtn" class="btn btn-outline-dark ms-auto">הדבקת תרגילים</button>
+    <button id="pasteBtn" class="btn btn-outline-dark">הדבקת תרגילים</button>
   </section>
 
   <!-- טבלת תרגילים -->
@@ -70,26 +83,22 @@
 
     <div class="table-responsive">
       <table id="exTable" class="table table-bordered align-middle">
-<thead class="table-light">
-  <tr>
-    <th rowspan="2" style="min-width:70px; vertical-align: middle;">מזהה</th>
-    <th style="min-width:160px;">שם תרגיל (עברית)</th>
-    <th style="min-width:160px;">שם תרגיל (אנגלית)</th>
-    <th style="min-width:140px;">אזור גוף</th>
-    <th style="min-width:140px;">חזרות/עומס</th>
-    <th style="min-width:220px;">קישור לגיף</th>
-    <th style="min-width:90px;">מחיקה</th>
-  </tr>
-  <tr>
-    <th colspan="2" style="min-width:220px;">תצוגת גיף</th>
-    <th colspan="4" style="min-width:280px;">הנחיות ביצוע</th>
-  </tr>
-</thead>
-
-
-        <tbody id="exBody">
-          <!-- שורות יוזנו דינמית -->
-        </tbody>
+        <thead class="table-light">
+          <tr>
+            <th rowspan="2" style="min-width:70px; vertical-align: middle;">מזהה</th>
+            <th style="min-width:160px;">שם תרגיל (עברית)</th>
+            <th style="min-width:160px;">שם תרגיל (אנגלית)</th>
+            <th style="min-width:140px;">אזור גוף</th>
+            <th style="min-width:140px;">חזרות/עומס</th>
+            <th style="min-width:220px;">קישור לגיף</th>
+            <th style="min-width:90px;">מחיקה</th>
+          </tr>
+          <tr>
+            <th colspan="2" style="min-width:220px;">תצוגת גיף</th>
+            <th colspan="4" style="min-width:280px;">הנחיות ביצוע</th>
+          </tr>
+        </thead>
+        <tbody id="exBody"><!-- שורות יוזנו דינמית --></tbody>
       </table>
     </div>
 
