--- a/main.html
+++ b/main.html
@@ -2,44 +2,41 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>אפליקציית אימונים — מסך פתיחה</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Bootstrap CSS (גרסה מותאמת ל־RTL) -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css"
-    rel="stylesheet"
-    crossorigin="anonymous"
-  >
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
 
-  <!-- Axios (ספרייה לתקשורת HTTP) -->
+  <!-- Axios -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-  <!-- הגדרות Supabase -->
-  <script src="config.js"></script>
-
-  <!-- פונקציות עזר כלליות -->
-  <script src="common.js"></script>
-
-  <!-- Bootstrap JS (כולל Popper לרכיבי UI אינטראקטיביים) -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    crossorigin="anonymous"
-  ></script>
+  <!-- הגדרות Supabase משותפות לכל המסכים -->
+  <script src="./config.js"></script>
 </head>
-
 <body class="container py-4">
 
-  <h1 class="mb-4">מסך פתיחה — אימונים</h1>
+  <h1 class="h3 mb-4">אפליקציית אימונים — מסך פתיחה</h1>
 
   <!-- סינון וחיפוש -->
   <form id="filtersForm" class="mb-4">
     <fieldset class="mb-3">
-      <legend>סינון</legend>
+      <legend class="h6">סינון</legend>
 
       <div class="form-check mb-2">
-        <input type="checkbox" id="onlyUndated" class="form-check-input" checked />
-        <label for="onlyUndated" class="form-check-label">הצג רק אימונים ללא תאריך</label>
+        <input type="checkbox" id="onlyUndated" class="form-check-input" checked>
+        <label for="onlyUndated" class="form-check-label">
+          הצג גם אימונים לא מתוזמנים (ברירת מחדל מסומן)
+        </label>
+      </div>
+
+      <div class="mb-2">
+        <label for="statusSelect" class="form-label">סטטוס אימון:</label>
+        <select id="statusSelect" class="form-select w-auto d-inline-block">
+          <option value="">כל הסטטוסים</option>
+          <option value="מתוכנן">מתוכנן</option>
+          <option value="בוצע">בוצע</option>
+        </select>
       </div>
 
       <div class="mb-2">
@@ -56,24 +53,25 @@
 
       <div class="mb-2">
         <label for="dateFrom" class="form-label">מתאריך:</label>
-        <input type="date" id="dateFrom" class="form-control d-inline-block w-auto" />
+        <input type="date" id="dateFrom" class="form-control d-inline-block w-auto">
         <label for="dateTo" class="form-label ms-2">עד תאריך:</label>
-        <input type="date" id="dateTo" class="form-control d-inline-block w-auto" />
+        <input type="date" id="dateTo" class="form-control d-inline-block w-auto">
       </div>
 
       <div class="mb-2">
         <label for="searchName" class="form-label">חיפוש בשם אימון:</label>
-        <input type="text" id="searchName" class="form-control w-auto d-inline-block" placeholder="הקלד חלק משם האימון" />
+        <input type="text" id="searchName" class="form-control w-auto d-inline-block" placeholder="הקלד חלק משם האימון">
       </div>
     </fieldset>
 
     <fieldset class="mb-3">
-      <legend>מיון</legend>
+      <legend class="h6">מיון</legend>
       <label for="sortField">מיין לפי:</label>
       <select id="sortField" class="form-select w-auto d-inline-block">
         <option value="id">מזהה אימון</option>
         <option value="workout_date">תאריך אימון</option>
         <option value="type">סוג אימון</option>
+        <option value="state">סטטוס</option>
       </select>
 
       <label for="sortDir" class="ms-2">סדר:</label>
@@ -90,28 +88,29 @@
     </div>
   </form>
 
+  <!-- סיכום קצר של הסינון -->
+  <div id="summary" class="mb-3 text-muted"></div>
+
   <!-- תוצאות -->
-  <div id="summary" class="mb-3 fw-bold">נמצאו 0 אימונים.</div>
+  <div class="table-responsive">
+    <table class="table table-striped align-middle">
+      <thead>
+        <tr>
+          <th style="white-space:nowrap;">מזהה אימון</th>
+          <th>שם אימון</th>
+          <th>סוג אימון</th>
+          <th>תאריך אימון</th>
+          <th>סטטוס</th>
+          <th style="width: 1%;">פעולות</th>
+        </tr>
+      </thead>
+      <tbody id="resultsBody"></tbody>
+    </table>
+  </div>
 
-  <table id="resultsTable" class="table table-bordered align-middle">
-    <thead class="table-light">
-      <tr>
-        <th>מזהה</th>
-        <th>שם אימון</th>
-        <th>סוג</th>
-        <th>תאריך</th>
-        <th>פעולות</th>
-      </tr>
-    </thead>
-    <tbody id="resultsBody">
-      <!-- יאוכלס דינמית -->
-    </tbody>
-  </table>
+  <!-- לוג/דיבאג -->
+  <pre id="log" class="small text-muted"></pre>
 
-  <pre id="log" hidden class="text-danger mt-3"></pre>
-
-  <!-- הסקריפט הראשי למסך הפתיחה -->
-  <script src="main.js"></script>
-
+  <script src="./main.js"></script>
 </body>
 </html>
